build and push to github actions

--- a/.github/workflows/build-push-kafka-connect-gh.yml
+++ b/.github/workflows/build-push-kafka-connect-gh.yml
@@ -2,8 +2,9 @@ name: Build and push - GITHUB ACTIONS - service/kafka-connect
 
 on:
   push:
-    - "services/kafka-connect/**"
-    - ".github/workflows/**kafka-connect-gh.yml"
+    paths: 
+      - "services/kafka-connect/**"
+      - ".github/workflows/**kafka-connect-gh.yml"
   #   tags: 
   #     - "v*"
   # pull_request:
