--- a/archive/E24/03/kafka-connect.yaml
+++ b/archive/E24/03/kafka-connect.yaml
@@ -54,9 +54,12 @@ spec:
         - name: kafka-connect-pv-storage
           persistentVolumeClaim:
             claimName: kafka-connect-pvc
+      imagePullSecrets:
+        - name: ghcr-secret
       containers:
         - name: kafka-connect
-          image: registry.gitlab.sdu.dk/jah/bigdatarepo/kafka-connect:7.3.1
+          image: ghcr.io/jakobhviidbddst/bigdatacourseexercises-kafka-connect:sha-76a8c3c
+          # image: registry.gitlab.sdu.dk/jah/bigdatarepo/kafka-connect:7.3.1
           securityContext:
             allowPrivilegeEscalation: false
           volumeMounts:
