--- a/infrastructure/share_kubeconfigs/.env-sample
+++ b/infrastructure/share_kubeconfigs/.env-sample
@@ -1,6 +1,4 @@
-PASSWORD=
-EMAIL=
-DATA_DIR=
-KUBECONFIGS_DIR="k8sconfigs"
-KUBECONFIGS_DIR_GROUPS="k8sconfigs-groups"
-FORM_FILENAME_GROUPS="*.xlsx"
+PASSWORD=""
+EMAIL=""
+KUBECONFIGS_DIR=""
+DATA_DIR=""
